--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   --secondary-color: #ffd98f;
   --text-color: #ffffff;
   --light-bg: #0f0f0f;
-  --dark-bg: #000000;
+  --dark-bg: #1b1b1b;
 }
 
 * {
@@ -34,7 +34,6 @@ html {
   max-width: 100%;
   margin: 0 auto;
   padding: 10px 10px;
-  background: linear-gradient(to top, #070707, var(--dark-bg));
 }
 
 .container-home {
@@ -124,6 +123,11 @@ nav {
   margin-left: 20px;
 }
 
+.logo-href {
+  text-decoration: none;
+  color: inherit;
+}
+
 .nav-links {
   display: flex;
   list-style: none;
@@ -191,7 +195,7 @@ nav {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.4));
+  
   z-index: 1;
 }
 
@@ -553,6 +557,10 @@ footer {
   font-size: 1.5rem;
   color: var(--secondary-color);
   margin-right: 20px;
+}
+
+.cp-href {
+  color: inherit;
 }
 
 @media (max-width: 1024px) {
